2006-05-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex.el (TeX-master): Quote safe-local-variable lambda expression
	to avoid byte compilation.

2006-05-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* font-latex.el (font-latex-fontify-script): Mark as
	safe-local-variable.

2006-05-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex.el (TeX-PDF-mode): Mark as safe-local-variable.
	(TeX-master): Don't use t in safe-local-variable declaration.
	(TeX-doc): Clarify.

2006-05-07  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-quotation): Do not match
	quotation marks in math constructs.

2006-05-05  Berend de Boer  <berend@pobox.com>

	* context.el (ConTeXt-mode-common-initialization): Previous fix
	still wrong. Problem is that all local variables were killed, so
	added a save/restore around the common initialisation.

2006-05-04  Berend de Boer  <berend@pobox.com>

	* context-nl.el (context-nl-mode) and context-en.el
	(context-en-mode): can now assume that ConTeXt-current-interface
	is buffer local.

	* context.el (ConTeXt-current-interface): this variable should
	always be buffer local. With this and above two changes having
	buffers with two interfaces at the same time works correctly
	(again?).

2006-04-26  Ralf Angeli  <angeli@caeruleus.net>

	* tex-buf.el (TeX-TeX-sentinel-check, TeX-parse-error): Support
	file-line-error error indicators.

2006-04-22  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex.el (TeX-format-list): Extend regexp for ConTeXt mode.

2006-04-21  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex.el (docTeX-mode): Make filling and indentation aware of
	DocStrip guards.

2006-04-20  David Kastrup  <dak@gnu.org>

	* tex-buf.el (TeX-warning): Don't balk if `string' is nil.

2006-04-17  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* font-latex.el (font-latex-match-script): Fix matching of nested
	braces.

2006-04-12  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex.el (LaTeX-babel-insert-hyphen): Do not error out at
	beginning of buffer.
