@@ -687,7 +687,10 @@ Generated by `font-latex-make-user-keywords'.")))
 This feature does not work in XEmacs."
   :type 'boolean
   :group 'font-latex)
-(put 'font-latex-fontify-script 'safe-local-variable 'booleanp)
+(put 'font-latex-fontify-script 'safe-local-variable
+     (if (fboundp 'booleanp)
+	 'booleanp
+       '(lambda (x) (memq x '(nil t)))))
 
 (defcustom font-latex-script-display '((raise -0.3) . (raise 0.3))
   "Display specification for subscript and superscript content.
