@@ -1,3 +1,10 @@
+2006-05-15  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* tex.el (TeX-PDF-mode): Rewrite safe-local-variable property for
+	Emacs 21 compatibility.
+
+	* font-latex.el (font-latex-fontify-script): Ditto.
+
 2006-05-10  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* tex.el (TeX-master): Quote safe-local-variable lambda expression
